scrollbar height correction

--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,5 @@
 
 .fancyScroll::-webkit-scrollbar, textarea::-webkit-scrollbar {
   width: 7.5px;
+  height: 7.5px;
 }
